--- a/Trabajo3_IgnacioToro.ipynb
+++ b/Trabajo3_IgnacioToro.ipynb
@@ -15953,7 +15953,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Abriendo otra página web, para este caso se eligio Sony.cl\n",
+    "#Abriendo otra página web, para este caso se eligio Mercado libre\n",
     "import requests"
    ]
   },
